--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
   "manifest_version": 3,
   "name": "Consume",
-  "version": "1.22",
-  "description": "Inspired by the film They Live (1988), this extension replaces Buy Now buttons with the dystopian billboard slogans from the film.",
+  "version": "1.23",
+  "description": "Automatically replaces purchase-related button labels with random uppercase slogans and applies consistent light-gray, extra-bold styling across all sites.",
   "icons": {
     "16": "icons/consume-icon-16.png",
     "48": "icons/consume-icon-48.png",
     "128": "icons/consume-icon-128.png"
   },
   "host_permissions": ["<all_urls>"],
-  "permissions": ["scripting"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
